# rust-todo-web-server

./: .env_sample  .gitignore  Cargo.toml  README.md
src/: main.rs
src/config/: argon2.rs  database.rs  environment.rs  jwt.rs  logger.rs  mod.rs  open_api.rs
src/todos/: controllers.rs  dtos.rs  routes.rs  service.rs
src/users/: controllers.rs  dtos.rs  mod.rs  routes.rs  service.rs
