[package]
name = "rust_todo_web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
argon2 = "0.5.1"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures-util = "0.3.28"
jsonwebtoken = "8.3.0"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
tracing = "0.1.37"
tracing-actix-web = "0.7.6"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
utoipa = { version = "3.5.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["actix-web"] }
uuid = { version = "1.4.1", features = ["serde"] }
validator = { version = "0.16.1", features = ["derive"] }